--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <span style="color: gold;">test</span>
     <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet quod voluptatem odit eligendi accusamus doloremque.</h1>
+    <h1>Lorem ipsum dolor sit amet.</h1>
 </body>
 </html>
