--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <span style="color: gold;">test</span>
+    <span>test</span>
     <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet quod voluptatem odit eligendi accusamus doloremque.</h1>
     <h1>Lorem ipsum dolor sit amet.</h1>
 </body>
